--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "async": "^2.0.0-rc.3",
     "body-parser": "~1.12.0",
     "debug": "^2.1.3",
+    "ejs": "^2.4.1",
     "express": "^4.12.4",
+    "gpio-stream": "^1.0.17",
     "morgan": "~1.5.1",
     "request": "^2.69.0",
     "useragent": "^2.1.9",
-    "yamlparser": "0.0.2",
-    "gpio-stream": "*"
+    "yamlparser": "0.0.2"
   }
 }
